# winnow-rule

./: Cargo.toml  README.md
src/: lib.rs  wrapper.rs
tests/: lib.rs  ui.rs
tests/ui/: long_sequence.rs  long_sequence.stderr
