[package]
name = "winnow-rule"
version = "0.1.0"
authors = ["TennyZhuang"]
edition = "2021"
license = "MIT"
description = "A procedural macro for defining winnow combinators in simple DSL"
homepage = "https://github.com/TennyZhuang/winnow-rule"
repository = "https://github.com/TennyZhuang/winnow-rule"
documentation = "https://docs.rs/winnow-rule"
readme = "README.md"
keywords = ["winnow", "parsing", "generator", "pest", "macro"]

[lib]
proc-macro = true

[dependencies]
winnow = "0.6.8"
syn = "1"
quote = "1"
pratt = "0.3"
proc-macro2 = { version = "1", features = ["span-locations"] }
proc-macro-error = "1"

[dev-dependencies]
logos = "0.12"
